src/objects/System_Design_Array__c.object
<CustomObject>
    <fields>
        <fullName>Sunnova_Projected_Annual_Output_kWh_y__c</fullName>
        <description>Production Estimate for Sunnova Lease</description>
        <inlineHelpText>Production Estimate for Sunnova Lease</inlineHelpText>
        <label>Sunnova Projected Annual Output (kWh/y)</label>
        <summarizedField>System_Design_Item__c.Sunnova_Projected_Annual_Output_kWhy__c</summarizedField>
        <summaryForeignKey>System_Design_Item__c.System_Design_Array__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Survey__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Survey</label>
        <referenceTo>Survey__c</referenceTo>
        <relationshipLabel>System Design Arrays</relationshipLabel>
        <relationshipName>System_Design_Arrays</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>System_Design__c</fullName>
        <label>System Design</label>
        <referenceTo>System_Design__c</referenceTo>
        <relationshipLabel>System Design Arrays</relationshipLabel>
        <relationshipName>System_Design_Arrays</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Total_TSRF__c</fullName>
        <inlineHelpText>Used to Calculated Weighted Overall TSRF at System Design</inlineHelpText>
        <label>Total TSRF</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Trenching_Length_ft__c</fullName>
        <label>Total Trenching Length (ft)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Trench_Type__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup</description>
        <label>Trench Type</label>
        <referenceTo>System_Design_Product__c</referenceTo>
        <relationshipLabel>System Design Arrays</relationshipLabel>
        <relationshipName>System_Design_Arrays</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Utility_Service__c</fullName>
        <formula>CB_Panel__r.Utility_Service__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Utility Service</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Weighted_Panel_Azimuth_Sum__c</fullName>
        <label>Weighted Panel Azimuth Sum</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Weighted_Panel_Tilt_Sum__c</fullName>
        <label>Weighted Panel Tilt Sum</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <label>System Design Array</label>
    <listViews>
        <fullName>All</fullName>
        <columns>OBJECT_ID</columns>
        <columns>NAME</columns>
        <columns>System_Design__c</columns>
        <columns>Panel_Count__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>SDA-{0}</displayFormat>
        <label>System Design Array Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>System Design Arrays</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>CB_Panel_Exists_on_Property</fullName>
        <active>true</active>
        <errorConditionFormula>CB_Panel__r.Utility_Service__r.Property__r.Id &lt;&gt;  System_Design__r.Property__r.Id</errorConditionFormula>
        <errorDisplayField>CB_Panel__c</errorDisplayField>
        <errorMessage>Selected CB Panel must exist on this System Design&apos;s Property</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>One_Trenching_Item_Allowed</fullName>
        <active>true</active>
        <description>Force a 1-1 relationship for Array and Trench Item</description>
        <errorConditionFormula>Number_of_Trenching_Items__c &gt; 1</errorConditionFormula>
        <errorMessage>There can only be one Trenching System Design Item per Array.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Record_is_Locked</fullName>
        <active>true</active>
        <errorConditionFormula>IF($Profile.Name = &apos;System Administrator&apos;, false, PRIORVALUE(Locked__c) = true)</errorConditionFormula>
        <errorMessage>Record is part of a closed Contract, and is locked from further editing</errorMessage>
    </validationRules>
</CustomObject>